--- a/Sequito_TSA3.html
+++ b/Sequito_TSA3.html
@@ -96,6 +96,108 @@
               </tr>
               <tr>
                 <td>37</td>
+                <td>1</td>
+                <td>Vulpix</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/vulpix.avif"></td>
+                <td colspan="2" bgcolor="red">Fire</td>
+                <td>------</td>
+                <td>Ninetails</td>
+                <td>Pix</td>
+                <td>05-12-24</td>
+              </tr>
+              <tr>
+                <td>63</td>
+                <td>1</td>
+                <td>Abra</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/abra.avif"></td>
+                <td colspan="2" bgcolor="magenta">Psychic</td>
+                <td>------</td>
+                <td>Kadabra</td>
+                <td>Abra</td>
+                <td>06-18-24</td>
+              </tr>
+              <tr>
+                <td>209</td>
+                <td>2</td>
+                <td>Snubbull</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/snubbull.avif"></td>
+                <td colspan="2" bgcolor="pink">Fairy</td>
+                <td>------</td>
+                <td>Granbull</td>
+                <td>Snub</td>
+                <td>08-28-24</td>
+              </tr>
+              <tr>
+                <td>92</td>
+                <td>1</td>
+                <td>Gastly</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/gastly.avif"></td>
+                <td colspan="1" bgcolor="purple">Ghost</td>
+                <td colspan="1" bgcolor="violet">Poison</td>
+                <td>Haunter</td>
+                <td>Gengar</td>
+                <td>Haunt</td>
+                <td>12-20-24</td>
+              </tr>
+              <tr>
+                <td>194</td>
+                <td>2</td>
+                <td>Wooper</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/wooper.avif"></td>
+                <td colspan="1" bgcolor="biege">Water</td>
+                <td colspan="1" bgcolor="brass">Ground</td>
+                <td>------</td>
+                <td>Quagsire</td>
+                <td>Wooper</td>
+                <td>11-15-24</td>
+              </tr>
+              <tr>
+                <td>304</td>
+                <td>3</td>
+                <td>Aron</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/aron.avif"></td>
+                <td colspan="1" bgcolor="gray">Steel</td>
+                <td colspan="1" bgcolor="#988558">Rock</td>
+                <td>Lairon</td>
+                <td>Agron</td>
+                <td>Aron</td>
+                <td>07-04-24</td>
+              </tr>
+              <tr>
+                <td>755</td>
+                <td>7</td>
+                <td>Morelull</td>
+                <td><img src= "https://img.pokemondb.net/sprites/home/normal/2x/avif/morelull.avif"></td>
+                <td colspan="1" bgcolor="#8A9A5B">Grass</td>
+                <td colspan="1" bgcolor="pink">Fairy</td>
+                <td>------</td>
+                <td>Shiinotic</td>
+                <td>Lul</td>
+                <td>01-01-23</td>
+              </tr>
+              <tr>
+                <td>922</td>
+                <td>9</td>
+                <td>Pawmo</td>
+                <td><img src= "https://img.pokemondb.net/sprites/scarlet-violet/normal/pawmo.png"></td>
+                <td colspan="1" bgcolor="yellow">Electric</td>
+                <td colspan="1" bgcolor="#FAE6FA">Fighting</td>
+                <td>------</td>
+                <td>Pawmot</td>
+                <td>Paw</td>
+                <td>04-21-23</td>
+              </tr>
+              <tr>
+                <td>529</td>
+                <td>9</td>
+                <td>Yuan</td>
+                <td><img src= "https://scontent-hkg4-1.xx.fbcdn.net/v/t39.30808-6/408824390_3471680799809759_4221169126441911025_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=qJICg-Xvn5IQ7kNvgFXxPWF&_nc_ht=scontent-hkg4-1.xx&oh=00_AYCQIlQqyEqRoAd5aL3RjZJtap4J6lEVB-S_wdtcN5JiGQ&oe=66469FDB" style="width:300px;height:300px;"></td>
+                <td colspan="1" bgcolor="gray">Steel</td>
+                <td colspan="1" bgcolor="#413839">Dark</td>
+                <td>Euanne</td>
+                <td>Yohan</td>
+                <td>Yohan</td>
+                <td>05-29-05</td>
               </tr>
         </tr>
     <tr>
